# QtQml-ContactsApp

./: CMakeLists.txt  Contact.cpp  Main.qml  contactsmodel.cpp  contactsmodel.h  main.cpp
android/: AndroidManifest.xml
android/res/layout/: custom_activity.xml
android/src/com/test/: ContactsActivity.java
